# sql-optimizer-agent

./: .gitignore  Dockerfile.populator  README.md  create_table.sql  docker-compose.yml  main.py  populate_db.py  profiler.py  pyproject.toml  setup_db.py
utils/: db_utils.py
